# stogger-systemd

./: pyproject.toml
src/stogger_systemd/: __init__.py
tests/: test_edge_cases.py  test_factory.py  test_fallback.py  test_socket_sending.py  test_wire_format.py
