[build-system]
requires = ["hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "stogger-systemd"
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = [
    "stogger",
    "systemd-python; sys_platform == 'linux'",
]
classifiers = [
    "Operating System :: POSIX :: Linux",
]

[tool.hatch.version]
source = "vcs"
tag-pattern = "^(?P<version>\\d{4}\\.\\d{1,2}\\.\\d{1,2})$"
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
